better scroll, fixed ios font resizing on rotate, fixed ios not showing the correct active color link
Former-commit-id: 0dae58fc8d23141e210fe90f443903e8e614fc37

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,7 +70,7 @@
   background-color: var(--color-accent);
 }
 .index > section {
-  padding-bottom: var(--margin-xl);
+  margin-bottom: var(--margin-xl);
 }
 
 .msg {
@@ -119,7 +119,7 @@
     max-width: 1240px;
   }
   .index > section {
-    margin-bottom: var(--margin);
+    /* margin-bottom: var(--margin); */
   }
 }
 
