--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -4,6 +4,7 @@
 
 html {
   font-size: 16px;
+  -webkit-text-size-adjust: 100%;
 }
 @media screen and (min-width: 330px) {
   html {
